font size fix on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -138,7 +138,7 @@
 @media (max-width: 400px) {
 
   .title, .title2 {
-    font-size: 3rem;
+    font-size: 2rem;
   }
 }
 
@@ -153,6 +153,6 @@
 @media (max-width: 700px) {
 
   .title, .title2 {
-    font-size: 4rem;
+    font-size: 3rem;
   }
 }
